--- a/part2-knn.ipynb
+++ b/part2-knn.ipynb
@@ -21,11 +21,56 @@
    "source": [
     "Our variables: calories, proteins, carbs, and fats"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "c507750f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd \n",
+    "import numpy as np \n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "1c239d88",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mdf = pd.read_csv('linked_mortality_file_1999_2000.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "989d23a1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
