--- a/part2-knn.ipynb
+++ b/part2-knn.ipynb
@@ -36,22 +36,435 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "1c239d88",
+   "cell_type": "markdown",
+   "id": "80b21453",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "mdf = pd.read_csv('linked_mortality_file_1999_2000.csv')"
+    "### Question 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "989d23a1",
+   "execution_count": 5,
+   "id": "1c239d88",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   SEQN  ELIGSTAT  MORTSTAT  UCOD_LEADING  DIABETES  HYPERTEN  PERMTH_INT  \\\n",
+      "0     1         2       NaN           NaN       NaN       NaN         NaN   \n",
+      "1     2         1       1.0           6.0       0.0       0.0       177.0   \n",
+      "2     3         2       NaN           NaN       NaN       NaN         NaN   \n",
+      "3     4         2       NaN           NaN       NaN       NaN         NaN   \n",
+      "4     5         1       0.0           NaN       NaN       NaN       244.0   \n",
+      "\n",
+      "   PERMTH_EXM  \n",
+      "0         NaN  \n",
+      "1       177.0  \n",
+      "2         NaN  \n",
+      "3         NaN  \n",
+      "4       244.0  \n",
+      "   SEQN  SDDSRVYR  RIDSTATR  RIDEXMON  RIAGENDR  RIDAGEYR  RIDAGEMN  RIDAGEEX  \\\n",
+      "0   1.0       1.0       2.0       2.0       2.0       2.0      29.0      31.0   \n",
+      "1   2.0       1.0       2.0       2.0       1.0      77.0     926.0     926.0   \n",
+      "2   3.0       1.0       2.0       1.0       2.0      10.0     125.0     126.0   \n",
+      "3   4.0       1.0       2.0       2.0       1.0       1.0      22.0      23.0   \n",
+      "4   5.0       1.0       2.0       2.0       1.0      49.0     597.0     597.0   \n",
+      "\n",
+      "   RIDRETH1  RIDRETH2  ...      WTIREP43      WTIREP44      WTIREP45  \\\n",
+      "0       4.0       2.0  ...  10094.017100   9912.461855   9727.078709   \n",
+      "1       3.0       1.0  ...  27186.728682  27324.345051  28099.663528   \n",
+      "2       3.0       1.0  ...  43993.193099  44075.386428  46642.563799   \n",
+      "3       4.0       2.0  ...  10702.307249  10531.444441  10346.119327   \n",
+      "4       3.0       1.0  ...  93164.782430  92119.608772  95388.490406   \n",
+      "\n",
+      "       WTIREP46      WTIREP47      WTIREP48      WTIREP49      WTIREP50  \\\n",
+      "0  10041.524113  9.953956e+03   9857.381983   9865.152486  10327.992682   \n",
+      "1  27757.066921  2.804929e+04  26716.602006  26877.704909  27268.025234   \n",
+      "2  44967.681579  4.457248e+04  44087.945688  44831.370881  44480.987235   \n",
+      "3  10636.063039  5.397605e-79  10533.108939  10654.749584  10851.024385   \n",
+      "4  94131.383538  9.529781e+04  91325.082461  91640.586117  92817.926915   \n",
+      "\n",
+      "       WTIREP51      WTIREP52  \n",
+      "0   9809.165049  10323.315747  \n",
+      "1  27406.383620  26984.812909  \n",
+      "2  45389.112766  43781.905637  \n",
+      "3  10564.981435  11012.529729  \n",
+      "4  94282.855382  91993.251203  \n",
+      "\n",
+      "[5 rows x 144 columns]\n",
+      "   SEQN         WTDRD1       WTDR4YR  DRDDRSTS  DRDEXMER  DRASCST2  DRDAINMD  \\\n",
+      "0   1.0   14809.893854   6066.128663       1.0      19.0       1.0       1.0   \n",
+      "1   2.0   26899.708892  14921.934292       1.0      72.0       1.0       1.0   \n",
+      "2   3.0   34388.840334  15866.447640       1.0      70.0       1.0       1.0   \n",
+      "3   4.0    7159.829389   3218.099911       1.0      72.0       1.0       1.0   \n",
+      "4   5.0  127746.359176  58973.611131       1.0      65.0       1.0       1.0   \n",
+      "\n",
+      "   DRDINTMD  DRDDAY  DRALANG  ...  DRQ370QQ  DRD370R  DRQ370RQ  DRD370S  \\\n",
+      "0       1.0     4.0      1.0  ...       NaN      2.0       NaN      2.0   \n",
+      "1       1.0     6.0      1.0  ...       NaN      2.0       NaN      2.0   \n",
+      "2       1.0     7.0      2.0  ...       NaN      NaN       NaN      NaN   \n",
+      "3       1.0     6.0      1.0  ...       NaN      2.0       NaN      2.0   \n",
+      "4       1.0     2.0      1.0  ...       NaN      NaN       NaN      NaN   \n",
+      "\n",
+      "   DRQ370SQ  DRD370T  DRQ370TQ  DRD370U  DRQ370UQ  DRD370V  \n",
+      "0       NaN      2.0       NaN      2.0       NaN      2.0  \n",
+      "1       NaN      2.0       NaN      2.0       NaN      2.0  \n",
+      "2       NaN      NaN       NaN      NaN       NaN      NaN  \n",
+      "3       NaN      2.0       NaN      2.0       NaN      2.0  \n",
+      "4       NaN      NaN       NaN      NaN       NaN      NaN  \n",
+      "\n",
+      "[5 rows x 133 columns]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEQN</th>\n",
+       "      <th>SDDSRVYR</th>\n",
+       "      <th>RIDSTATR</th>\n",
+       "      <th>RIDEXMON</th>\n",
+       "      <th>RIAGENDR</th>\n",
+       "      <th>RIDAGEYR</th>\n",
+       "      <th>RIDAGEMN</th>\n",
+       "      <th>RIDAGEEX</th>\n",
+       "      <th>RIDRETH1</th>\n",
+       "      <th>RIDRETH2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>DRQ370QQ</th>\n",
+       "      <th>DRD370R</th>\n",
+       "      <th>DRQ370RQ</th>\n",
+       "      <th>DRD370S</th>\n",
+       "      <th>DRQ370SQ</th>\n",
+       "      <th>DRD370T</th>\n",
+       "      <th>DRQ370TQ</th>\n",
+       "      <th>DRD370U</th>\n",
+       "      <th>DRQ370UQ</th>\n",
+       "      <th>DRD370V</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>926.0</td>\n",
+       "      <td>926.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>597.0</td>\n",
+       "      <td>597.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 283 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SEQN  SDDSRVYR  RIDSTATR  RIDEXMON  RIAGENDR  RIDAGEYR  RIDAGEMN  RIDAGEEX  \\\n",
+       "0   1.0       1.0       2.0       2.0       2.0       2.0      29.0      31.0   \n",
+       "1   2.0       1.0       2.0       2.0       1.0      77.0     926.0     926.0   \n",
+       "2   3.0       1.0       2.0       1.0       2.0      10.0     125.0     126.0   \n",
+       "3   4.0       1.0       2.0       2.0       1.0       1.0      22.0      23.0   \n",
+       "4   5.0       1.0       2.0       2.0       1.0      49.0     597.0     597.0   \n",
+       "\n",
+       "   RIDRETH1  RIDRETH2  ...  DRQ370QQ  DRD370R  DRQ370RQ  DRD370S  DRQ370SQ  \\\n",
+       "0       4.0       2.0  ...       NaN      2.0       NaN      2.0       NaN   \n",
+       "1       3.0       1.0  ...       NaN      2.0       NaN      2.0       NaN   \n",
+       "2       3.0       1.0  ...       NaN      NaN       NaN      NaN       NaN   \n",
+       "3       4.0       2.0  ...       NaN      2.0       NaN      2.0       NaN   \n",
+       "4       3.0       1.0  ...       NaN      NaN       NaN      NaN       NaN   \n",
+       "\n",
+       "   DRD370T  DRQ370TQ  DRD370U  DRQ370UQ  DRD370V  \n",
+       "0      2.0       NaN      2.0       NaN      2.0  \n",
+       "1      2.0       NaN      2.0       NaN      2.0  \n",
+       "2      NaN       NaN      NaN       NaN      NaN  \n",
+       "3      2.0       NaN      2.0       NaN      2.0  \n",
+       "4      NaN       NaN      NaN       NaN      NaN  \n",
+       "\n",
+       "[5 rows x 283 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mdf = pd.read_csv('linked_mortality_file_1999_2000.csv') \n",
+    "print( mdf.head() )\n",
+    "gdf = pd.read_sas(\"DEMO.xpt\", format=\"xport\") \n",
+    "print( gdf.head() )\n",
+    "df = gdf.merge(mdf, on=\"SEQN\", how=\"inner\") \n",
+    "\n",
+    "\n",
+    "food = pd.read_sas(\"DRXTOT.xpt\", format=\"xport\") \n",
+    "print(food.head())\n",
+    "X = df.merge(food, on=\"SEQN\", how=\"left\") \n",
+    "X.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9d6a7b99",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ELIGSTAT</th>\n",
+       "      <th>MORTSTAT</th>\n",
+       "      <th>PERMTH_INT</th>\n",
+       "      <th>RIDAGEEX</th>\n",
+       "      <th>DRXTKCAL</th>\n",
+       "      <th>DRXTPROT</th>\n",
+       "      <th>DRXTCARB</th>\n",
+       "      <th>DRXTTFAT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>1358.88</td>\n",
+       "      <td>31.96</td>\n",
+       "      <td>250.36</td>\n",
+       "      <td>27.24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>926.0</td>\n",
+       "      <td>2463.00</td>\n",
+       "      <td>123.16</td>\n",
+       "      <td>350.37</td>\n",
+       "      <td>71.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>1517.69</td>\n",
+       "      <td>40.19</td>\n",
+       "      <td>233.63</td>\n",
+       "      <td>49.94</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>1474.93</td>\n",
+       "      <td>56.16</td>\n",
+       "      <td>191.03</td>\n",
+       "      <td>56.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>597.0</td>\n",
+       "      <td>2658.14</td>\n",
+       "      <td>97.13</td>\n",
+       "      <td>253.98</td>\n",
+       "      <td>114.52</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ELIGSTAT  MORTSTAT  PERMTH_INT  RIDAGEEX  DRXTKCAL  DRXTPROT  DRXTCARB  \\\n",
+       "0         2       NaN         NaN      31.0   1358.88     31.96    250.36   \n",
+       "1         1       1.0       177.0     926.0   2463.00    123.16    350.37   \n",
+       "2         2       NaN         NaN     126.0   1517.69     40.19    233.63   \n",
+       "3         2       NaN         NaN      23.0   1474.93     56.16    191.03   \n",
+       "4         1       0.0       244.0     597.0   2658.14     97.13    253.98   \n",
+       "\n",
+       "   DRXTTFAT  \n",
+       "0     27.24  \n",
+       "1     71.95  \n",
+       "2     49.94  \n",
+       "3     56.20  \n",
+       "4    114.52  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_interesting = X.loc[:,['ELIGSTAT', 'MORTSTAT', 'PERMTH_INT', 'RIDAGEEX', 'DRXTKCAL','DRXTPROT', 'DRXTCARB', 'DRXTTFAT'] ]\n",
+    "X_interesting.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "233b3002",
+   "metadata": {},
+   "source": [
+    "1. Describe the data, particularly what an observation is and whether there are any missing data that might impact your analysis. Who collected the data and why? What known limitations are there to analysis? (10/100 pts)\n",
+    "\n",
+    "The data is -. An observation of the data is a singular row, showing each unique value for all of the attributes within that row. There are missing data from the MORTSTAT, PERMTH_INT, DIABETES, and other columns. The data was collected by the CDC to use in their National Center for Health Statistics database, "
+   ]
   }
  ],
  "metadata": {
