--- a/project_1_bsds_part1.ipynb
+++ b/project_1_bsds_part1.ipynb
@@ -2732,40 +2732,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "58f765e2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "# Explaining how to find k by annotating this code, see code notes as a step by step as to how we found our k\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split # imports we need\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
-    "data = X_interesting[['DRXTKCAL','DRXTPROT','DRXTCARB','DRXTTFAT','MORTSTAT']]\n",
-    "data = data.dropna()\n",
+    "data = X_interesting[['DRXTKCAL','DRXTPROT','DRXTCARB','DRXTTFAT','MORTSTAT']] # defining the specific variables we will use for this model\n",
+    "data = data.dropna() # dropping any NaN values to clean things up \n",
     "\n",
-    "X = data[['DRXTKCAL','DRXTPROT','DRXTCARB','DRXTTFAT']]\n",
-    "y = data['MORTSTAT']\n",
+    "X = data[['DRXTKCAL','DRXTPROT','DRXTCARB','DRXTTFAT']] # defining variables we will be using to find an outcome\n",
+    "y = data['MORTSTAT'] # defining the outcome we are trying to predict\n",
     "\n",
     "# train test split\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y # splitting data into 80% (to train on) and 20% (to test on)\n",
     ")\n",
     "\n",
     "\n",
-    "# scaling the features\n",
+    "# scaling the features - want everything to be scaled the same (so theres no crazy scales that distort things)\n",
     "scaler = StandardScaler()\n",
     "\n",
-    "X_train_scaled = scaler.fit_transform(X_train)\n",
-    "X_test_scaled = scaler.transform(X_test)\n",
+    "X_train_scaled = scaler.fit_transform(X_train) # scaled our x training\n",
+    "X_test_scaled = scaler.transform(X_test) # scaled our y testing\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "776e70a6",
    "metadata": {},
    "outputs": [
@@ -2779,13 +2781,13 @@
    ],
    "source": [
     "# Finding k and getting scores\n",
-    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.pipeline import Pipeline # imports we need to run these things\n",
     "from sklearn.model_selection import cross_val_score\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "import numpy as np\n",
     "\n",
-    "k_values = range(1, 31)\n",
-    "cv_scores = []\n",
+    "k_values = range(1, 31) # the range of k values we will test out\n",
+    "cv_scores = [] # empty list to collect the scores from running this\n",
     "\n",
     "for k in k_values:\n",
     "    pipe = Pipeline([\n",
@@ -2794,10 +2796,10 @@
     "    ])\n",
     "    \n",
     "    scores = cross_val_score(pipe, X, y, cv=5, scoring='roc_auc')\n",
-    "    cv_scores.append(scores.mean())\n",
+    "    cv_scores.append(scores.mean()) # runs through each possible k, finds the cv score for each\n",
     "\n",
-    "best_k = k_values[np.argmax(cv_scores)]\n",
-    "print(\"Best k:\", best_k)\n"
+    "best_k = k_values[np.argmax(cv_scores)] # determines the best performing k out of all the ones we tested\n",
+    "print(\"Best k:\", best_k) # prints the best one out of all those\n"
    ]
   },
   {
@@ -2818,7 +2820,8 @@
     }
    ],
    "source": [
-    "# plotting how well k performs\n",
+    "# plotting how well k performs \n",
+    "# (we can see our k=29 appears to perform the best (highest ROC-AUC, based on the graph)\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "plt.figure()\n",
@@ -2831,7 +2834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "b3b0adac",
    "metadata": {},
    "outputs": [
@@ -2860,6 +2863,7 @@
     }
    ],
    "source": [
+    "# getting the stats on our final model, looking at the accuracy of our k, the ROC-AUC, confusion matrix, and a brief report\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "\n",
@@ -2902,6 +2906,14 @@
    "source": [
     "## Question 4"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02acc73b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
