--- a/project_1_bsds_part1.ipynb
+++ b/project_1_bsds_part1.ipynb
@@ -3055,6 +3055,22 @@
     "Note about uniform weights- \n",
     "- Every neighbor contributes equally, which makes sense here because none of the features are strongly distinguishing some neighbors as more informative"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "84f40130",
+   "metadata": {},
+   "source": [
+    "## Question 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be89e1af",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
