--- a/project_1_bsds_part1.ipynb
+++ b/project_1_bsds_part1.ipynb
@@ -1851,6 +1851,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fed5fda7",
+   "metadata": {},
+   "source": [
+    "# PART 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83d970e5",
    "metadata": {},
    "source": [
