--- a/project_1_bsds_final.ipynb
+++ b/project_1_bsds_final.ipynb
@@ -1859,6 +1859,20 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e7c7dbdc",
+   "metadata": {},
+   "source": [
+    "Submit a notebook that clearly addresses the following, using code and markdown chunks:\n",
+    "\n",
+    "1. Describe the data, particularly what an observation is and whether there are any missing data that might impact your analysis. Who collected the data and why? What known limitations are there to analysis? (10/100 pts)\n",
+    "2. Describe the variables you selected to predict mortality and life expectancy, and the rationale behind them. Analyze your variables using describe tables, kernel densities, scatter plots, and conditional kernel densities. Are there any patterns of interest to notice? (10/100 pts)\n",
+    "3. Using your variables to predict mortality using a k-Nearest Neighbor Classifier. Analyze its performance and explain clearly how you select. (10/100 pts)\n",
+    "4. Using your variables to predict life expectancy using a k-Nearest Neighbor Regressor. Analyze its performance and explain clearly how you select. (10/100 pts)\n",
+    "5. Describe how your model could be used for health interventions based on patient characteristics. Are there any limitations or risks to consider? (10/100 pts)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83d970e5",
    "metadata": {},
    "source": [
