--- a/project_1_bsds_final.ipynb
+++ b/project_1_bsds_final.ipynb
@@ -1854,7 +1854,7 @@
    "id": "fed5fda7",
    "metadata": {},
    "source": [
-    "# PART 2"
+    "### Part 2: k-NN classification/regression, write-up (50/100 pts)"
    ]
   },
   {
