--- a/project_1_bsds_final.ipynb
+++ b/project_1_bsds_final.ipynb
@@ -3107,7 +3107,7 @@
     " - The k-nn classifier can be used by doctors to pinpoint patients whose \"neighbors\" with similar nutrional values have a high mortality rate. If a significant majority of these neighbors are labeled as \"Deceased (1)\", the patient is marked as high-risk. These patients could then be flagged and prioritized for treatment, preventative screens, therapy/counseling, etc.\n",
     "\n",
     "Modifying Patient Diets\n",
-    " - Our $k$-NN regression model can be used to design personalized diet changes by identifying  patients' \"neighbors\" with longevity. We can find individuals with similar characteristics who achieved longer follow-up times (PERMTH_INT), allowing doctors to make customized, data-driven recommendations for changes in patient diets. Specifically, a doctor could suggest adjusting a patient's macronutrient levels to more closely mirror the 'neighbor' profiles associated with better mortality outcomes.\n"
+    " - Our k-NN regression model can be used to design personalized diet changes by identifying  patients' \"neighbors\" with longevity. We can find individuals with similar characteristics who achieved longer follow-up times (PERMTH_INT), allowing doctors to make customized, data-driven recommendations for changes in patient diets. Specifically, a doctor could suggest adjusting a patient's macronutrient levels to more closely mirror the 'neighbor' profiles associated with better mortality outcomes.\n"
    ]
   },
   {
@@ -3166,6 +3166,9 @@
     "Low Feature Predictions\n",
     " - As shown in the heatmap above, the correlation between nutritional intake (like fats or proteins) and mortality status is extremely low (near 0). This suggests that nutrition alone is not a strong enough predictor of mortality status in this dataset.\n",
     "\n",
+    "Correlation and Causation\n",
+    " - Correlation does not equal causation. A patient could have a low nutrient intake because they are already ill, making their diet a symptom of mortality status and not a cause.\n",
+    "\n",
     "Class Imbalance\n",
     " - The bar chart shows a significantly higher number of \"Alive (0)\" participants than \"Deceased (1)\". This is a risk for $k$-NN because the algorithm might default to predicting \"Alive (0)\" for almost all patients because most \"neighbors\" in any given area of the data space are alive.\n",
     "\n",
@@ -3173,7 +3176,7 @@
     " - There is a risk that a health intervention might focus on a nutrient that could be a proxy variable for something else. For example, high protein intake might correlate with wealth (ability to buy meat), and wealth (not the protein itself) might be what is extending life.\n",
     "\n",
     "Data Sparsity\n",
-    " - $k$-NN suffers from the \"curse of dimensionality.\" With many nutritional features and lots of missing data (as seen in the DRXTOT.xpt file), the \"distance\" between neighbors becomes less meaningful, leading to less reliable predictions."
+    " - k-NN suffers from the \"curse of dimensionality.\" With many nutritional features and lots of missing data (as seen in the DRXTOT.xpt file), the \"distance\" between neighbors becomes less meaningful, leading to less reliable predictions."
    ]
   }
  ],
