--- a/project_1_bsds_final.ipynb
+++ b/project_1_bsds_final.ipynb
@@ -1881,19 +1881,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5fbf5e",
-   "metadata": {},
-   "source": [
-    "Describe the data, particularly what an observation is and whether there are any missing data that might impact your analysis. Who collected the data and why? What known limitations are there to analysis? (10/100 pts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5e4733aa",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The data for this project is sourced from the National Health and Nutrition Examination Survey (NHANES) for the 1999–2000 cycle, linked with the National Death Index (NDI) through the CDC’s Linked Mortality File.\n",
+    "\n",
+    "Who collected the data and why? \n",
+    " - The data was collected by the Centers for Disease Control and Prevention (CDC) and the National Center for Health Statistics (NCHS). The purpose of NHANES is to assess the health and nutritional status of adults and children in the US through a combination of interviews and physical examinations. This specific 1999–2000 dataset is used because it provides the longest \"follow-up window,\" allowing us to see mortality outcomes over a span of 20 years.\n",
+    "\n",
+    "What is an observation? \n",
+    " - An observation (a single row) represents one unique individual surveyed by the CDC. Each individual is identified by a sequence number (SEQN). For our analysis, each observation includes their demographic profile, their self-reported nutritional intake (macronutrients like proteins and carbs), and their mortality status.\n",
+    "\n",
+    "Missing Data and Impact \n",
+    " - Significant missing data was found in the nutritional files (DRXTOT.xpt) for certain nutrients. Because the k-NN algorithm relies on calculating the \"distance\" between points in space, missing values are very problematic as they act as gaps in the data. To ensure the model functions, we dropped columns with lots of missing values and focused on the core macronutrients (calories, proteins, carbs, and fat) where data was most complete.\n",
+    "\n",
+    "### Known Limitations\n",
+    "\n",
+    "Self-Reporting Bias\n",
+    " - Nutritional data is based on 24-hour dietary recall, which is often subject to memory errors or under-reporting from patients.\n",
+    "Survival Bias\n",
+    "  - This data only tracks those who were alive and able to participate in the 1999–2000 survey, so it does not account for people who may have died shortly before the survey began.\n",
+    "Confounding Variables\n",
+    "  - While we use nutrition to predict mortality, other factors not in our X_interesting list (like smoking, exercise, or genetics) also strongly influence life expectancy."
+   ]
   },
   {
    "cell_type": "markdown",
