update project final

--- a/project_1_bsds_final.ipynb
+++ b/project_1_bsds_final.ipynb
@@ -1898,11 +1898,16 @@
     "### Known Limitations\n",
     "\n",
     "Self-Reporting Bias\n",
-    " - Nutritional data is based on 24-hour dietary recall, which is often subject to memory errors or under-reporting from patients.\n",
+    " - Nutritional data is based on 24-hour dietary recall, which is often subject to memory errors or under-reporting of unhealthy nutrients (calories/fats) from patients. Patients may also over-report eating healthier nutrients.\n",
+    "\n",
     "Survival Bias\n",
     "  - This data only tracks those who were alive and able to participate in the 1999–2000 survey, so it does not account for people who may have died shortly before the survey began.\n",
+    "\n",
     "Confounding Variables\n",
-    "  - While we use nutrition to predict mortality, other factors not in our X_interesting list (like smoking, exercise, or genetics) also strongly influence life expectancy."
+    "  - While we use nutrition to predict mortality, other factors not in our X_interesting list (like smoking, exercise, or genetics) also strongly influence life expectancy.\n",
+    "\n",
+    "Missing Data\n",
+    " - We had to drop certain columns while working witht the dataset because k-nn can't be calculated with missing values. This is why data cleaning is very important."
    ]
   },
   {
@@ -1918,7 +1923,9 @@
    "id": "9c4e63fa",
    "metadata": {},
    "source": [
-    "The variables that we chose to work with to predict mortality and ife expectancy are calories, proteins, carbs, and fats. We decided to use these variables because of how broad macro nutrients are, and that they are all generally linked to each other (ex, look at protein rather than type of fish eaten, covers broader spectrum, pizza would link carbs and fat together, etc). We felt that macro nutrients would give an overarching view of the a diet, rather than narrowing it down too closely to specific foods, hence our choice. Not only that, diet is generally closely related to health, so it may lead to some interesting patterns to arise."
+    "The variables that we chose to work with to predict mortality and ife expectancy are calories, proteins, carbs, and fats. We decided to use these variables because of how broad macro nutrients are, and that they are all generally linked to each other (ex, look at protein rather than type of fish eaten, covers broader spectrum, pizza would link carbs and fat together, etc). We felt that macro nutrients would give an overarching view of the a diet, rather than narrowing it down too closely to specific foods, hence our choice. Not only that, diet is generally closely related to health, so it may lead to some interesting patterns to arise.\n",
+    "\n",
+    "While we are focusing on macronutrients, it is important to note that other variables may be confounding when predicting mortality rates, such as age. "
    ]
   },
   {
@@ -3117,7 +3124,7 @@
     " - The k-nn classifier can be used by doctors to pinpoint patients whose \"neighbors\" with similar nutrional values have a high mortality rate. If a significant majority of these neighbors are labeled as \"Deceased (1)\", the patient is marked as high-risk. These patients could then be flagged and prioritized for treatment, preventative screens, therapy/counseling, etc.\n",
     "\n",
     "Modifying Patient Diets\n",
-    " - Our k-NN regression model can be used to design personalized diet changes by identifying  patients' \"neighbors\" with longevity. We can find individuals with similar characteristics who achieved longer follow-up times (PERMTH_INT), allowing doctors to make customized, data-driven recommendations for changes in patient diets. Specifically, a doctor could suggest adjusting a patient's macronutrient levels to more closely mirror the 'neighbor' profiles associated with better mortality outcomes.\n"
+    " - Our k-NN regression model can be used to design personalized diet changes by identifying  patients' \"neighbors\" with longevity. We can find individuals with similar characteristics who achieved longer follow-up times (PERMTH_INT), allowing doctors to make customized, data-driven recommendations for changes in patient diets. Specifically, a doctor could suggest adjusting a patient's macronutrient levels to more closely mirror the \"neighbor\" profiles associated with better mortality outcomes.\n"
    ]
   },
   {
@@ -3186,7 +3193,7 @@
     " - There is a risk that a health intervention might focus on a nutrient that could be a proxy variable for something else. For example, high protein intake might correlate with wealth (ability to buy meat), and wealth (not the protein itself) might be what is extending life.\n",
     "\n",
     "Data Sparsity\n",
-    " - k-NN suffers from the \"curse of dimensionality.\" With many nutritional features and lots of missing data (as seen in the DRXTOT.xpt file), the \"distance\" between neighbors becomes less meaningful, leading to less reliable predictions."
+    " - k-NN suffers from the \"curse of dimensionality\". With many nutritional features and lots of missing data (as seen in the DRXTOT.xpt file), the distance between neighbors becomes less meaningful, leading to less reliable predictions."
    ]
   }
  ],
