--- a/project_1_bsds_final.ipynb
+++ b/project_1_bsds_final.ipynb
@@ -1091,22 +1091,22 @@
    "source": [
     "We can also hone in on a few variables of interest, which we have selected below. \n",
     "\n",
-    "DRXIKCAL:\n",
+    "DRXTKCAL:\n",
     "- Energy (kcal)\n",
     "- Range: (0-9656.67)\n",
     "- 557 missing values\n",
     "\n",
-    "DRXIPROT:\n",
+    "DRXTPROT:\n",
     "- Protein (gm)\n",
     "- Range: (0-461.02)\n",
     "- 557 missing values\n",
     "\n",
-    "DRXICARB:\n",
+    "DRXTCARB:\n",
     "- Carbohydrate (gm)\n",
     "- Range: (0-1513.96)\n",
     "- 557 missing values\n",
     "\n",
-    "DRXITFAT:\n",
+    "DRXTTFAT:\n",
     "- Total fat (gm)\n",
     "- Range: (0-428.23)\n",
     "- 557 missing values"
